@@ -13,6 +13,7 @@ description of the <TT>fl_</TT> functions, see
 <A HREF="Fl.html">Fl</A><BR>
 <A HREF="Fl_Adjuster.html">Fl_Adjuster</A><BR>
 <A HREF="Fl_Bitmap.html">Fl_Bitmap</A><BR>
+<A HREF="Fl_BMP_Image.html">Fl_BMP_Image</A><BR>
 <A HREF="Fl_Box.html">Fl_Box</A><BR>
 <A HREF="Fl_Browser_.html">Fl_Browser_</A><BR>
 <A HREF="Fl_Browser.html">Fl_Browser</A><BR>
@@ -112,6 +113,7 @@ description of the <TT>fl_</TT> functions, see
 	</UL>
 	<LI><A HREF="Fl_RGB_Image.html">Fl_RGB_Image</A><BR>
 	<UL>
+	    <LI><A HREF="Fl_BMP_Image.html">Fl_BMP_Image</A><BR>
 	    <LI><A HREF="Fl_JPEG_Image.html">Fl_JPEG_Image</A><BR>
 	    <LI><A HREF="Fl_PNG_Image.html">Fl_PNG_Image</A><BR>
 	    <LI><A HREF="Fl_PNM_Image.html">Fl_PNM_Image</A><BR>
