@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0b9
 
+	- Add Fl_BMP_Image class to support loading of Windows
+	  bitmap (BMP) files.
 	- The shiny demo didn't work on some systems (no
 	  single-buffered OpenGL visual), and the new box types
 	  were reset when show(argc, argv) was called.
